# distributed-web-crawler

./: .gitignore  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
scripts/: seed.py
src/: config.py  logging_config.py  main.py  metrics.py  worker_app.py
src/api/: models.py  routes.py
src/crawler/: downloader.py  parser.py  robots.py  simhash.py
src/frontier/: dedup.py  frontier.py  lease.py  normalizer.py  priority_queue.py  scheduler.py  stream_queue.py
src/models/: db.py
src/static/: index.html
src/storage/: html_store.py  metadata.py  search_index.py
tests/: test_normalizer.py  test_parser.py  test_phase2.py  test_simhash.py  test_stream.py
